Correct main logo in dark mode

--- a/components/Navigation/Header.module.scss
+++ b/components/Navigation/Header.module.scss
@@ -23,8 +23,8 @@
     }
 
     .Logo {
-      max-width: 14rem;
-      // padding: 0.5rem 1rem;
+      max-width: 12rem;
+      border-radius: 1rem;
       cursor: pointer;
     }
 
